[package]
name = "katbin"
version = "0.1.0"
authors = ["ATechnoHazard <amolele@gmail.com>"]
license = "MIT"
description = "Small, lightweight pastebin+URL shortener written in Rust."
repository = "https://github.com/ATechnoHazard/katbin"
homepage = "https://github.com/ATechnoHazard/katbin"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json"] }
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
slog = "2.7.0"
slog-term = "2.6.0"
anyhow = "1.0.35"
slog-async = "2.5.0"
bcrypt = "0.9.0"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
jirachi = { version = "0.1.9", features = ["collision-resistant"] }
rocket_cors = "0.5.2"
regex = "1.4.2"

[dev-dependencies]
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
jirachi_cli = "0.1.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
